fixed z-index issues btwn the booking-summary and navbar on mobile

--- a/client/css/book.css
+++ b/client/css/book.css
@@ -588,7 +588,7 @@
 
     .booking-summary{
         top: 70px;
-        z-index: 999;
+        z-index: 1;
     }
     .summary-card{
         display: none;
